--- a/src/app/seleccion-leccion-inundacion/seleccion-leccion-inundacion.page.html
+++ b/src/app/seleccion-leccion-inundacion/seleccion-leccion-inundacion.page.html
@@ -32,19 +32,19 @@
     <div class="buttons-container">
       <div class="button-column">
         <div class="custom-button button1" (click)="navigateToPrevencionInundacion()">
-          <img src="assets/img/icono de ayuda.png" alt="Prevención de Inundación" class="button-icon">
+          <img src="assets/img/med-Prev.jpg" alt="Prevención de Inundación" class="button-icon">
           <span>Prevención de Inundación</span>
         </div>
       </div>
       <div class="button-column">
         <div class="custom-button button2" (click)="navigateToDecisionInundacion()">
-          <img src="assets/img/icono de ayuda.png" alt="Decisión durante Inundación" class="button-icon">
+          <img src="assets/img/des-inun.jpg" alt="Decisión durante Inundación" class="button-icon">
           <span>Decisión durante Inundación</span>
         </div>
       </div>
       <div class="button-column">
         <div class="custom-button button3" (click)="navigateToReconocimientoInundacion()">
-          <img src="assets/img/icono de ayuda.png" alt="Reconocimiento de Potenciales Inundación" class="button-icon">
+          <img src="assets/img/rec pot.jpg" alt="Reconocimiento de Potenciales Inundación" class="button-icon">
           <span>Reconocimiento de Potenciales Inundación</span>
         </div>
       </div>
