--- a/src/app/nivel1-inundacion/nivel1-inundacion.page.html
+++ b/src/app/nivel1-inundacion/nivel1-inundacion.page.html
@@ -32,7 +32,7 @@
   <p class="centered-text">Tu texto aquí</p>
   <div class="section section-1">
     
-    <img src="assets/img/your-image.png" alt="Centered Image" class="centered-image">
+    <img src="assets/img/prg-1-inundacion.png" alt="Centered Image" class="centered-image">
   </div>
   <div class="section section-2">
     <p class="centered-text">Pregunta sobre la imagen</p>
