--- a/src/app/seleccion-leccion-deslizamiento/seleccion-leccion-deslizamiento.page.html
+++ b/src/app/seleccion-leccion-deslizamiento/seleccion-leccion-deslizamiento.page.html
@@ -32,19 +32,19 @@
     <div class="buttons-container">
       <div class="button-column">
         <div class="custom-button button1" (click)="navigateToPrevencionDeslizamiento()">
-          <img src="assets/img/icono de ayuda.png" alt="Prevención de Deslizamiento" class="button-icon">
+          <img src="assets/img/preven.png" alt="Prevención de Deslizamiento" class="button-icon">
           <span>Prevención de Deslizamiento</span>
         </div>
       </div>
       <div class="button-column">
         <div class="custom-button button2" (click)="navigateToDecisionDeslizamiento()">
-          <img src="assets/img/icono de ayuda.png" alt="Decisión durante Deslizamiento" class="button-icon">
+          <img src="assets/img/desi.png" alt="Decisión durante Deslizamiento" class="button-icon">
           <span>Decisión durante Deslizamiento</span>
         </div>
       </div>
       <div class="button-column">
         <div class="custom-button button3" (click)="navigateToReconocimientoDeslizamiento()">
-          <img src="assets/img/icono de ayuda.png" alt="Reconocimiento de Potenciales Deslizamiento" class="button-icon">
+          <img src="assets/img/recon.png" alt="Reconocimiento de Potenciales Deslizamiento" class="button-icon">
           <span>Reconocimiento de Potenciales Deslizamiento</span>
         </div>
       </div>
