--- a/src/app/seleccion-leccion-deslizamiento/seleccion-leccion-deslizamiento.page.scss
+++ b/src/app/seleccion-leccion-deslizamiento/seleccion-leccion-deslizamiento.page.scss
@@ -59,10 +59,10 @@ h1 {
 
 .custom-button img.button-icon {
   position: absolute;
-  top: 5%;
+  top: 10%; /* Ajusta este valor para mover la imagen hacia abajo */
   left: 50%;
   transform: translateX(-50%);
-  width: 50%;
+  width: 60%; /* Ajusta este valor para cambiar el tamaño de la imagen */
   height: auto;
 }
 
