--- a/src/app/juego-inundacion/juego-inundacion.page.html
+++ b/src/app/juego-inundacion/juego-inundacion.page.html
@@ -28,6 +28,8 @@
 <ion-content>
   <div class="level-selection-container">
     <img src="assets/img/fondo.jpg" class="background-image" />
+    <div class="characters">
+      <img src="assets/img/rana fondo.png" class="character aqua" />
     <h1>Selección de Juego</h1>
     <div class="game-box">
       <div class="game-option">
@@ -78,6 +80,7 @@
           </div>
         </div>
       </div>
+    </div>
     </div>
   </div>
 </ion-content>
