--- a/src/app/juego-inundacion/juego-inundacion.page.scss
+++ b/src/app/juego-inundacion/juego-inundacion.page.scss
@@ -64,6 +64,43 @@ ion-header {
 
 h1 {
   position: relative;
+  font-size: 2rem;
+  margin-top: 2%;
+  z-index: 1;
+  color: #000;
+}
+
+.characters {
+  position: absolute;
+  top: 5%;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.game-type {
+  flex: 1;
+  text-align: left;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 10px;
+}
+
+.aqua {
+  position: absolute;
+  right: 75%;
+  right: 75%;
+  bottom: 5%;
+}
+
+h1 {
+  position: relative;
   font-size: 2.5rem;
   margin-bottom: 20px;
   z-index: 1;
