--- a/src/app/nivel1-deslizamiento/nivel1-deslizamiento.page.scss
+++ b/src/app/nivel1-deslizamiento/nivel1-deslizamiento.page.scss
@@ -1,97 +1,168 @@
 html, body, ion-content {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-  }
-  
-  ion-header {
-    ion-toolbar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding: 0 1%;
-    }
-  
-    .title-container {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      margin-left: 20%;
-    }
-  
-    .logo-title-box {
-      display: flex;
-      align-items: center;
-    }
-  
-    img.logo {
-      width: 6.5%;
-      height: auto;
-      margin-right: 1rem;
-    }
-  
-    ion-title {
-      font-size: 1.2rem;
-      line-height: 1.5;
-      margin: 0;
-    }
-  
-    .icon, .back-icon {
-      width: 30px;
-      height: auto;
-    }
-  }
-  
-  .section {
-    width: 100%;
-    text-align: center;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+ion-header {
+  ion-toolbar {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    padding: 0 0%;
   }
-  
-  .section-1 {
-    height: 30%;
-  }
-  
-  .centered-image {
-    width: 50%;
-    height: 50%;
-    object-fit: contain;
-  }
-  
-  .section-2 {
-    height: 20%;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 18px;
-    font-weight: bold;
-    color: black;
-  }
-  
-  .centered-text {
-    text-align: center;
-    width: 100%;
-    font-size: 24px;
-    font-weight: bold;
-    color: black;
-  }
-  
-  .section-3 {
-    height: 50%;
+
+  .title-container {
     display: flex;
-    justify-content: center;
     align-items: center;
-  }
-  
-  ion-grid {
-    width: 100%;
-    max-width: 500px;
-  }
-  
-  ion-button {
+    justify-content: center;
     width: 100%;
   }
-  
+
+  img.logo {
+    width: 6.5%;
+    height: 6.5%;
+    margin-left: 43%;
+  }
+
+  ion-title {
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: 1.5;
+    margin-right: 30%;
+  }
+
+  .icon, .back-icon {
+    width: 30px;
+    height: auto;
+  }
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.quiz-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  overflow: hidden;
+  padding: 20px;
+}
+
+.timer {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.section {
+  width: 100%;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-1 {
+  height: 30%;
+}
+
+.centered-image {
+  width: 45%; /* Reducir el tamaño en un 10% */
+  height: 45%; /* Reducir el tamaño en un 10% */
+  object-fit: contain;
+}
+
+.section-2 {
+  height: 20%;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  color: black;
+}
+
+.centered-text {
+  text-align: center;
+  width: 100%;
+  font-size: 24px;
+  font-weight: bold;
+  color: black;
+}
+
+.section-3 {
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+ion-grid {
+  width: 100%;
+  max-width: 500px;
+}
+
+ion-button {
+  width: 100%;
+  color: black;
+}
+
+ion-button.selected {
+  background-color: #3880ff;
+  color: white;
+}
+
+.carousel-nav {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 5%;
+  height: auto;
+  cursor: pointer;
+  z-index: 10;
+  opacity: 0.5;
+}
+
+.carousel-nav.left {
+  left: 10px;
+}
+
+.carousel-nav.right {
+  right: 10px;
+}
+
+.carousel-nav:hover {
+  opacity: 1;
+}
+
+.nav-icon {
+  width: 100%;
+  height: auto;
+}
+
+.footer-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5%;
+  background: #000;
+}
+
+
+.footer-toolbar {
+  --background: #000; /* Cambia el color del fondo del footer a negro */
+}
