--- a/src/app/nivel2-inundacion/nivel2-inundacion.page.html
+++ b/src/app/nivel2-inundacion/nivel2-inundacion.page.html
@@ -5,13 +5,11 @@
         <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
       </ion-button>
     </ion-buttons>
-    <div class="header-container">
-      <div class="logo-title-container">
-        <img src="assets/img/logo.png" alt="Logo" class="logo" />
-        <ion-title>
-          Preparación Ante Riesgo<br>y Amenazas
-        </ion-title>
-      </div>
+    <div class="title-container">
+      <img src="assets/img/logo.png" alt="Logo" class="logo" (click)="goHome()" />
+      <ion-title>
+        Preparación Ante Riesgo<br>y Amenazas
+      </ion-title>
     </div>
     <ion-buttons slot="end">
       <ion-button (click)="navigateToInicioSesion()">
@@ -28,28 +26,41 @@
 </ion-header>
 
 <ion-content>
-  <div class="game-container">
-    <h2 class="sentence-title">Completa la oración:</h2>
-    <img src="assets/img/placeholder.png" alt="Image" class="sentence-image" />
+  <div class="quiz-container">
+    <img src="assets/img/fondo.jpg" class="background-image" />
+    <div class="timer">Tiempo restante: {{ timer }} segundos</div>
 
-    <div class="sentence">
-      <span class="text-part">Esta es una </span>
-      <span class="blank" id="blank-1"></span>
-      <span class="text-part"> de prueba para </span>
-      <span class="blank" id="blank-2"></span>
-      <span class="text-part"> el juego.</span>
-    </div>
+    <ion-slides pager="true" [options]="slideOpts">
+      <ion-slide *ngFor="let question of questions; let i = index">
+        <div class="game-container">
+          <h2 class="sentence-title">{{ question.text }}</h2>
+          <img src="assets/img/placeholder.png" alt="Image" class="sentence-image" />
+          <div class="sentence">
+            <span class="text-part" *ngFor="let part of question.sentence">
+              <ng-container *ngIf="!part.blank">{{ part.text }}</ng-container>
+              <ng-container *ngIf="part.blank">
+                <span class="blank" [attr.id]="'blank-' + i + '-' + part.id" (drop)="drop($event)" (dragover)="allowDrop($event)"></span>
+              </ng-container>
+            </span>
+          </div>
+          <div class="word-options">
+            <ion-button *ngFor="let option of question.options" class="word-button" draggable="true" (dragstart)="drag($event, option)">
+              {{ option }}
+            </ion-button>
+          </div>
+        </div>
+      </ion-slide>
+    </ion-slides>
 
-    <div class="word-options">
-      <ion-button class="word-button">palabra1</ion-button>
-      <ion-button class="word-button">palabra2</ion-button>
-      <ion-button class="word-button">palabra3</ion-button>
-      <ion-button class="word-button">palabra4</ion-button>
+    <!-- Botón de finalizar -->
+    <div class="carousel-nav right" (click)="finishQuiz()">
+      <img src="assets/img/flecha derecha-finalizar.png" alt="Finalizar" class="nav-icon">
     </div>
   </div>
 </ion-content>
 
 <ion-footer>
-  <ion-toolbar>
+  <ion-toolbar class="footer-toolbar">
+    <ion-title></ion-title>
   </ion-toolbar>
 </ion-footer>
