--- a/src/app/administracion/administracion.page.html
+++ b/src/app/administracion/administracion.page.html
@@ -44,14 +44,12 @@
       <ion-row>
         <ion-col size="12">
           <ion-list>
-            <ion-item *ngFor="let user of users" [hidden]="!user.nombre || !user.apellido">
+            <ion-item *ngFor="let user of users; let i = index">
               <ion-checkbox slot="start" [(ngModel)]="user.selected"></ion-checkbox>
               <ion-label>
-                <h2>{{user.apellido}}, {{user.nombre}}</h2>
-                <p>Perfil: {{user.perfil}}</p>
+                <h2>{{i + 1}}. Usuario: {{user.Usuario}}</h2>
+                <p>Nombre: {{user.Nombre}}, Apellido: {{user.Apellido}}, Password: {{user.Password}}, Admin: {{user.Admin}}</p>
               </ion-label>
-              <ion-button (click)="editUser(user)" color="primary" size="small">Editar</ion-button>
-              <ion-button (click)="deleteUser(user)" color="danger" size="small">Borrar</ion-button>
             </ion-item>
           </ion-list>
         </ion-col>
@@ -59,8 +57,3 @@
     </ion-grid>
   </div>
 </ion-content>
-
-
-
-
-
