--- a/src/app/administracion/administracion.page.scss
+++ b/src/app/administracion/administracion.page.scss
@@ -1,105 +1,116 @@
 .black-toolbar {
-    --background: #000 !important;
-    --color: #fff !important;
-  }
-  
-  ion-toolbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
-  }
-  
-  ion-title {
-    text-align: center;
-    font-size: 1.2rem;
-    line-height: 1.5;
-    flex: 1;
-    margin: 0 20px;
-  }
-  
-  .icon {
-    width: 30px;
-    height: 30px;
-  }
-  
-  .back-icon {
-    width: 30px;
-    height: 30px;
-  }
-  
-  .administracion-container {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    overflow: hidden;
-    padding: 20px;
-  }
-  
-  .background-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-  }
-  
-  .title-box {
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    margin-bottom: 20px;
-  }
-  
-  .title-box .logo {
-    width: 50px;
-    height: 50px;
-    margin-right: 20px;
-  }
-  
-  .title-box .title-text {
-    text-align: left;
-  }
-  
-  .title-box .title-text h2,
-  .title-box .title-text h3 {
-    margin: 0;
-  }
-  
-  .buttons-row {
-    display: flex;
-    justify-content: space-around;
-    margin-bottom: 20px;
-  }
-  
-  ion-button {
-    flex: 1;
-    margin: 0 5px;
-  }
-  
-  .user-list {
-    width: 100%;
-  }
-  
-  ion-item {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
-  
-  ion-label {
-    flex: 1;
-  }
-  
-  ion-button.edit-button,
-  ion-button.delete-button {
-    flex: none;
-    width: auto;
-    min-width: 80px;
-    margin-left: 10px;
-  }
-  
-  
+  --background: #000 !important;
+  --color: #fff !important;
+}
+
+ion-toolbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+
+ion-title {
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  flex: 1;
+  margin: 0 20px;
+}
+
+.icon {
+  width: 30px;
+  height: 30px;
+}
+
+.back-icon {
+  width: 30px;
+  height: 30px;
+}
+
+.administracion-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  overflow: hidden;
+  padding: 20px;
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  z-index: -1;
+}
+
+.title-box {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 20px;
+}
+
+.title-box .logo {
+  width: 50px;
+  height: 50px;
+  margin-right: 20px;
+}
+
+.title-box .title-text {
+  text-align: left;
+}
+
+.title-box .title-text h2,
+.title-box .title-text h3 {
+  margin: 0;
+}
+
+ion-grid {
+  width: 100%;
+}
+
+ion-row {
+  width: 100%;
+}
+
+ion-col {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+ion-button {
+  flex: 1;
+  margin: 0 5px;
+  --background: #f0f0f0; /* Cambia este color al que desees */
+  --color: #000; /* Cambia este color al que desees */
+}
+
+ion-button:hover {
+  --background: #e0e0e0; /* Color de fondo al pasar el ratón por encima */
+}
+
+ion-button:active {
+  --background: #d0d0d0; /* Color de fondo al hacer clic */
+}
+
+.user-list {
+  width: 100%;
+}
+
+ion-item {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+ion-label {
+  flex: 1;
+}
+
+ion-checkbox {
+  margin-right: 10px;
+}
