--- a/src/app/registro/registro.page.html
+++ b/src/app/registro/registro.page.html
@@ -35,11 +35,12 @@
         <ion-input [(ngModel)]="nombreUsuario" type="text"></ion-input>
       </ion-item>
       <ion-item>
-        <ion-label position="floating">Contraseña</ion-label>
-        <ion-input [(ngModel)]="contrasena" type="password"></ion-input>
+        <ion-label position="floating">Password</ion-label>  <!-- Cambiado a Password -->
+        <ion-input [(ngModel)]="password" type="password"></ion-input>
       </ion-item>
       <ion-button expand="block" class="register-button" color="tertiary" (click)="registrar()">Registrarse</ion-button>
     </div>
   </div>
   <div class="footer-bar"></div>
 </ion-content>
+
