Committing local changes after resolving merge

--- a/src/app/ayuda/ayuda.page.html
+++ b/src/app/ayuda/ayuda.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="black-toolbar">
     <ion-title>Preparación Ante Riesgo y Amenazas</ion-title>
   </ion-toolbar>
 </ion-header>
