--- a/src/app/decision-durante-deslizamiento/decision-durante-deslizamiento.page.scss
+++ b/src/app/decision-durante-deslizamiento/decision-durante-deslizamiento.page.scss
@@ -63,6 +63,10 @@
     font-size: 1rem;
     color: #000;
     padding: 0 20px;
+    width: 80%;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 10px;
   }
   
   .character {
