--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -24,8 +24,9 @@
 }
 
 .character {
-  max-width: 20%;
-  max-height: 20%;
+  max-width: 16%;
+  max-height: 16%;
+  margin-bottom: 5%;
 }
 
 .buttons {
@@ -95,7 +96,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 5%;
+  height: 10%;
   background: #000;
 }
 
