--- a/src/app/prevencion-deslizamiento/prevencion-deslizamiento.page.scss
+++ b/src/app/prevencion-deslizamiento/prevencion-deslizamiento.page.scss
@@ -49,6 +49,7 @@
     height: auto;
     object-fit: cover;
     border-radius: 10px;
+    
   }
   
   .image-caption {
@@ -62,6 +63,10 @@
     font-size: 1rem;
     color: #000;
     padding: 0 20px;
+    width: 80%;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 10px;
   }
   
   .character {
