--- a/src/app/prevencion-inundacion/prevencion-inundacion.page.scss
+++ b/src/app/prevencion-inundacion/prevencion-inundacion.page.scss
@@ -31,6 +31,7 @@
   margin: 0;
   font-size: 1.5rem;
   color: #000;
+  
 }
 
 .image-wrapper {
@@ -62,6 +63,10 @@
   font-size: 1rem;
   color: #000;
   padding: 0 20px;
+  width: 80%;
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 10px;
 }
 
 .character {
