--- a/src/app/seleccion-juego/seleccion-juego.page.html
+++ b/src/app/seleccion-juego/seleccion-juego.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="black-toolbar">
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
         <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
