--- a/src/app/opciones/opciones.page.html
+++ b/src/app/opciones/opciones.page.html
@@ -1,5 +1,5 @@
 <ion-header>
-  <ion-toolbar color="dark">
+  <ion-toolbar class="black-toolbar">
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
         <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
@@ -39,13 +39,8 @@
           <ion-label>Notificaciones</ion-label>
           <ion-toggle slot="end" [(ngModel)]="settings.notifications" (ionChange)="onSettingChange()"></ion-toggle>
         </ion-item>
-        
-        <ion-button expand="full" class="account-settings" (click)="openAccountSettings()">Configuración de cuenta</ion-button>
       </ion-card-content>
     </ion-card>
   </div>
+  <div class="footer-bar"></div>
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar color="dark"></ion-toolbar>
-</ion-footer>
