--- a/src/app/seleccion-tema/seleccion-tema.page.scss
+++ b/src/app/seleccion-tema/seleccion-tema.page.scss
@@ -45,7 +45,7 @@ h1 {
   --padding-top: 1%;
   --padding-bottom: 1%;
   --inner-padding: 1%;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  box-shadow: none !important;
   font-size: 1.2rem;
   display: flex;
   align-items: center;
@@ -89,7 +89,7 @@ h1 {
 
 .character {
   max-width: 90%;
-  max-height: 100%;
+  max-height: 94%;
 }
 
 .aqua {
@@ -102,16 +102,17 @@ h1 {
 .terra {
   position: absolute;
   left: 90%;
-  top: 10%;
+  top: -3%;
   bottom: 0%;
 }
+
 
 .footer-bar {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 5%;
+  height: 10%;
   background: #000;
   z-index: 10; /* Asegúrate de que los botones estén en frente */
 }
