--- a/src/app/seleccion-leccion-deslizamiento/seleccion-leccion-deslizamiento.page.html
+++ b/src/app/seleccion-leccion-deslizamiento/seleccion-leccion-deslizamiento.page.html
@@ -29,7 +29,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content id="main-content">
   <div class="seleccion-tema-container">
     <img src="assets/img/fondo.jpg" class="background-image" />
     <h1>Selección de Categoría</h1>
@@ -93,3 +93,4 @@
     </ion-list>
   </ion-content>
 </ion-menu>
+
