--- a/src/app/juego-inundacion/juego-inundacion.page.html
+++ b/src/app/juego-inundacion/juego-inundacion.page.html
@@ -36,13 +36,13 @@
         <div class="game-type">Opción Múltiple</div>
         <div class="levels">
           <div class="level-container">
-            <ion-button class="level-button" (click)="navigateToJuegoInundacion(1)">
+            <ion-button class="level-button" (click)="navigateToNivel1Inundacion()">
               <img src="assets/img/lv-1-w.png" />
             </ion-button>
-            <ion-button class="level-button" (click)="navigateToJuegoInundacion(2)">
+            <ion-button class="level-button" (click)="navigateToNivel2Inundacion()">
               <img src="assets/img/lv-2-w.png" />
             </ion-button>
-            <ion-button class="level-button" (click)="navigateToJuegoInundacion(3)">
+            <ion-button class="level-button" (click)="navigateToNivel3Inundacion()">
               <img src="assets/img/lv-3-w.png" />
             </ion-button>
           </div>
@@ -52,13 +52,13 @@
         <div class="game-type">Completar la Oración</div>
         <div class="levels">
           <div class="level-container">
-            <ion-button class="level-button" (click)="navigateToJuegoInundacion(4)">
+            <ion-button class="level-button" (click)="navigateToNivel1InundacionCO()">
               <img src="assets/img/lv-1-w.png" />
             </ion-button>
-            <ion-button class="level-button" (click)="navigateToJuegoInundacion(5)">
+            <ion-button class="level-button" (click)="navigateToNivel2InundacionCO()">
               <img src="assets/img/lv-2-w.png" />
             </ion-button>
-            <ion-button class="level-button" (click)="navigateToJuegoInundacion(6)">
+            <ion-button class="level-button" (click)="navigateToNivel3InundacionCO()">
               <img src="assets/img/lv-3-w.png" />
             </ion-button>
           </div>
@@ -68,13 +68,13 @@
         <div class="game-type">Point and Click</div>
         <div class="levels">
           <div class="level-container">
-            <ion-button class="level-button" (click)="navigateToJuegoInundacion(7)">
+            <ion-button class="level-button" (click)="navigateToNivel1Deslizamiento()">
               <img src="assets/img/lv-1-w.png" />
             </ion-button>
-            <ion-button class="level-button" (click)="navigateToJuegoInundacion(8)">
+            <ion-button class="level-button" (click)="navigateToNivel2Deslizamiento()">
               <img src="assets/img/lv-2-w.png" />
             </ion-button>
-            <ion-button class="level-button" (click)="navigateToJuegoInundacion(9)">
+            <ion-button class="level-button" (click)="navigateToNivel3Deslizamiento()">
               <img src="assets/img/lv-3-w.png" />
             </ion-button>
           </div>
@@ -83,9 +83,5 @@
     </div>
     </div>
   </div>
+  <div class="footer-bar"></div>
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar>
-  </ion-toolbar>
-</ion-footer>
