--- a/src/app/resultado/resultado.page.html
+++ b/src/app/resultado/resultado.page.html
@@ -28,9 +28,9 @@
 <ion-content>
   <div class="results-container">
     <img src="assets/img/fondo.jpg" class="background-image" />
-    <h1 class="titulo-result">Resultados</h1>
     <div class="characters">
-      <img src="assets/img/rana fondo.png" class="character aqua" />
+      <img src="assets/img/aqua rana.png" class="character aqua" />
+      <img src="assets/img/terra armadillo.png" class="character terra" />
     </div>
     <img src="assets/img/bien.png" alt="Resultado" class="result-image" />
     <p class="result-text">¡Bien hecho! Aquí están tus resultados:</p>
@@ -45,7 +45,3 @@
     </div>
   </div>
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar></ion-toolbar>
-</ion-footer>
