--- a/src/app/ayuda/ayuda.page.html
+++ b/src/app/ayuda/ayuda.page.html
@@ -61,10 +61,7 @@
       </div>
     </div>
   </div>
+  <div class="footer-bar"></div>
 </ion-content>
 
-<ion-footer>
-  <ion-toolbar>
-    <ion-title>Footer</ion-title>
-  </ion-toolbar>
-</ion-footer>
+
