--- a/src/app/ayuda/ayuda.page.scss
+++ b/src/app/ayuda/ayuda.page.scss
@@ -223,4 +223,13 @@ body {
     color: black;
     margin-top: 5px;
   }
+
+  .footer-bar {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 10%;
+    background: #000;
+  }
   
