--- a/src/app/juego-deslizamiento/juego-deslizamiento.page.html
+++ b/src/app/juego-deslizamiento/juego-deslizamiento.page.html
@@ -84,9 +84,5 @@
     </div>
     </div>
   </div>
+  <div class="footer-bar"></div>
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar>
-  </ion-toolbar>
-</ion-footer>
