--- a/src/app/juego-deslizamiento/juego-deslizamiento.page.scss
+++ b/src/app/juego-deslizamiento/juego-deslizamiento.page.scss
@@ -71,7 +71,7 @@ ion-header {
   display: flex;
   justify-content: space-between;
   width: 80%;
-  z-index: 5; /* Asegúrate de que los personajes estén detrás de los botones */
+  z-index: 1; /* Asegúrate de que los personajes estén detrás de los botones */
 }
 
 .character {
@@ -83,14 +83,14 @@ ion-header {
   position: absolute;
   right: 80%;
   right: 80%;
-  bottom: 5%;
+  bottom: 7%;
 }
 
 h1 {
   position: relative;
   font-size: 2.5rem;
   margin-bottom: 20px;
-  z-index: 1;
+  z-index: 2;
   color: #000;
 }
 
@@ -105,6 +105,9 @@ h1 {
   background-color: rgba(202, 202, 202, 0.3);
   width: 90%;
   max-width: 900px;
+  height: 87%;
+  max-height: auto;
+  z-index: 2;
 }
 
 .game-option {
@@ -148,13 +151,14 @@ h1 {
   justify-content: center;
   align-items: center;
   width: 80px; /* Ajustar el tamaño según sea necesario */
-  height: 80px; /* Ajustar el tamaño según sea necesario */
+  height: auto; /* Ajustar el tamaño según sea necesario */
   transition: transform 0.3s ease, box-shadow 0.3s ease;
+  z-index: 3;
 }
 
 .level-button img {
   width: 100%; /* Ajusta el tamaño de las imágenes */
-  height: 100%; /* Ajusta el tamaño de las imágenes */
+  height: auto; /* Ajusta el tamaño de las imágenes */
 }
 
 .level-button:hover {
@@ -165,4 +169,14 @@ h1 {
 .back-icon {
   width: 30px;
   height: auto;
-}    
+}   
+
+.footer-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 10%;
+  background: #000;
+  z-index: 5;
+} 
