--- a/src/app/juego-inundacion/juego-inundacion.page.scss
+++ b/src/app/juego-inundacion/juego-inundacion.page.scss
@@ -77,26 +77,27 @@ h1 {
   left: 50%;
   transform: translateX(-50%);
   display: flex;
-  flex-direction: row;
-  align-items: center;
   justify-content: space-between;
-  width: 100%;
-  margin-bottom: 30px;
+  width: 80%;
+  z-index: 1; /* Asegura que los personajes estén por encima del fondo */
 }
 
+.character {
+  max-width: 90%;
+  max-height: 100%;
+}
+
+.aqua {
+  position: absolute;
+  right: 70%;
+  bottom: 5%;
+}
 .game-type {
   flex: 1;
   text-align: left;
   font-size: 1.5rem;
   font-weight: bold;
   padding: 10px;
-}
-
-.aqua {
-  position: absolute;
-  right: 75%;
-  right: 75%;
-  bottom: 5%;
 }
 
 h1 {
@@ -118,6 +119,9 @@ h1 {
   background-color: rgba(202, 202, 202, 0.3);
   width: 90%;
   max-width: 900px;
+  height: 87%;
+  max-height: auto;
+  z-index: 2;
 }
 
 .game-option {
@@ -161,13 +165,13 @@ h1 {
   justify-content: center;
   align-items: center;
   width: 80px; /* Ajustar el tamaño según sea necesario */
-  height: 80px; /* Ajustar el tamaño según sea necesario */
+  height: auto; /* Ajustar el tamaño según sea necesario */
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .level-button img {
   width: 100%; /* Ajusta el tamaño de las imágenes */
-  height: 100%; /* Ajusta el tamaño de las imágenes */
+  height: auto; /* Ajusta el tamaño de las imágenes */
 }
 
 .level-button:hover {
@@ -178,4 +182,13 @@ h1 {
 .back-icon {
   width: 30px;
   height: auto;
+}
+
+.footer-bar {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 10%;
+  background: #000;
 }
