--- a/src/app/nivel2-inundacion/nivel2-inundacion.page.html
+++ b/src/app/nivel2-inundacion/nivel2-inundacion.page.html
@@ -1,3 +1,4 @@
+<!-- nivel2-inundacion.page.html -->
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
@@ -29,31 +30,34 @@
   <div class="quiz-container">
     <img src="assets/img/fondo.jpg" class="background-image" />
     <div class="timer">Tiempo restante: {{ timer }} segundos</div>
-
-    <ion-slides pager="true" [options]="slideOpts">
-      <ion-slide *ngFor="let question of questions; let i = index">
-        <div class="game-container">
-          <h2 class="sentence-title">{{ question.text }}</h2>
-          <img src="assets/img/placeholder.png" alt="Image" class="sentence-image" />
-          <div class="sentence">
-            <span class="text-part" *ngFor="let part of question.sentence">
-              <ng-container *ngIf="!part.blank">{{ part.text }}</ng-container>
-              <ng-container *ngIf="part.blank">
-                <span class="blank" [attr.id]="'blank-' + i + '-' + part.id" (drop)="drop($event)" (dragover)="allowDrop($event)"></span>
-              </ng-container>
-            </span>
-          </div>
-          <div class="word-options">
-            <ion-button *ngFor="let option of question.options" class="word-button" draggable="true" (dragstart)="drag($event, option)">
-              {{ option }}
-            </ion-button>
-          </div>
+    <div class="question-container" *ngFor="let question of questions; let i = index">
+      <div *ngIf="currentIndex === i">
+        <div class="section section-1">
+          <img src="assets/img/nv-1-w.png" alt="Centered Image" class="centered-image">
         </div>
-      </ion-slide>
-    </ion-slides>
+        <div class="section section-2">
+          <p class="centered-text">{{ question.text }}</p>
+        </div>
+        <div class="section section-3">
+          <ion-grid>
+            <ion-row>
+              <ion-col size="6" *ngFor="let option of question.options">
+                <ion-button expand="block" [class.selected]="isSelected(i, option)" (click)="selectAnswer(i, option)">{{ option }}</ion-button>
+              </ion-col>
+            </ion-row>
+          </ion-grid>
+        </div>
+      </div>
+    </div>
 
-    <!-- Botón de finalizar -->
-    <div class="carousel-nav right" (click)="finishQuiz()">
+    <!-- Navegación del carrusel -->
+    <div *ngIf="currentIndex > 0" class="carousel-nav left" (click)="prevSection()">
+      <img src="assets/img/flecha izquierda.png" alt="Anterior" class="nav-icon">
+    </div>
+    <div *ngIf="currentIndex < questions.length - 1" class="carousel-nav right" (click)="nextSection()">
+      <img src="assets/img/flecha derecha.png" alt="Siguiente" class="nav-icon">
+    </div>
+    <div *ngIf="currentIndex === questions.length - 1" class="carousel-nav right" (click)="finishQuiz()">
       <img src="assets/img/flecha derecha-finalizar.png" alt="Finalizar" class="nav-icon">
     </div>
   </div>
