--- a/src/app/nivel2-inundacion/nivel2-inundacion.page.html
+++ b/src/app/nivel2-inundacion/nivel2-inundacion.page.html
@@ -1,6 +1,6 @@
 <!-- nivel2-inundacion.page.html -->
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="black-toolbar">
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
         <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
@@ -61,10 +61,5 @@
       <img src="assets/img/flecha derecha-finalizar.png" alt="Finalizar" class="nav-icon">
     </div>
   </div>
+  <div class="footer-bar"></div>
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar class="footer-toolbar">
-    <ion-title></ion-title>
-  </ion-toolbar>
-</ion-footer>
