--- a/src/app/nivel3-deslizamiento-c.o/nivel3-deslizamiento-c.o.page.html
+++ b/src/app/nivel3-deslizamiento-c.o/nivel3-deslizamiento-c.o.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar class="black-toolbar">
     <ion-title>nivel3-deslizamiento-C.O</ion-title>
   </ion-toolbar>
 </ion-header>
