--- a/src/app/nivel3-deslizamiento/nivel3-deslizamiento.page.html
+++ b/src/app/nivel3-deslizamiento/nivel3-deslizamiento.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar class="black-toolbar">
     <ion-title>Nivel3Deslizamiento</ion-title>
   </ion-toolbar>
 </ion-header>
