--- a/src/app/nivel1-deslizamiento/nivel1-deslizamiento.page.html
+++ b/src/app/nivel1-deslizamiento/nivel1-deslizamiento.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar class="black-toolbar">
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
         <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
@@ -62,10 +62,5 @@
       <img src="assets/img/flecha derecha-finalizar.png" alt="Finalizar" class="nav-icon">
     </div>
   </div>
+  <div class="footer-bar"></div>
 </ion-content>
-
-<ion-footer>
-  <ion-toolbar class="footer-toolbar">
-    <ion-title></ion-title>
-  </ion-toolbar>
-</ion-footer>
