--- a/src/app/nivel3-inundacion-c.o/nivel3-inundacion-c.o.page.html
+++ b/src/app/nivel3-inundacion-c.o/nivel3-inundacion-c.o.page.html
@@ -1,6 +1,6 @@
 <!-- nivel3-inundacion-c.o.page.html -->
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar class="black-toolbar">
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
         <img src="assets/img/retroceso.png" alt="Back" class="back-icon" />
