--- a/src/app/opciones/opciones.page.scss
+++ b/src/app/opciones/opciones.page.scss
@@ -32,10 +32,10 @@ ion-content {
   .options-container {
     position: relative;
     width: 90%;
-    max-width: 500px;
+    max-width: 35%;
     margin: auto;
     background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 10px;
+    border-radius: 10%;
     padding: 2rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   }
