--- a/src/app/juego-deslizamiento/juego-deslizamiento.page.scss
+++ b/src/app/juego-deslizamiento/juego-deslizamiento.page.scss
@@ -62,6 +62,14 @@ ion-header {
   overflow: hidden;
 }
 
+h1 {
+  position: relative;
+  font-size: 2rem;
+  margin-top: 2%;
+  z-index: 1;
+  color: #000;
+}
+
 .characters {
   position: absolute;
   top: 5%;
@@ -71,7 +79,7 @@ ion-header {
   display: flex;
   justify-content: space-between;
   width: 80%;
-  z-index: 1; /* Asegúrate de que los personajes estén detrás de los botones */
+  z-index: 2;
 }
 
 .character {
@@ -79,19 +87,28 @@ ion-header {
   max-height: 100%;
 }
 
-.terra {
+.aqua {
   position: absolute;
-  right: 80%;
-  right: 80%;
-  bottom: 7%;
+  right: 70%;
+  bottom: 5%;
+  z-index: 2;
+}
+
+.game-type {
+  flex: 1;
+  text-align: left;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 10px;
 }
 
 h1 {
   position: relative;
   font-size: 2.5rem;
   margin-bottom: 20px;
-  z-index: 2;
+  z-index: 3;
   color: #000;
+  
 }
 
 .game-box {
@@ -105,9 +122,7 @@ h1 {
   background-color: rgba(202, 202, 202, 0.3);
   width: 90%;
   max-width: 900px;
-  height: 87%;
-  max-height: auto;
-  z-index: 2;
+  z-index: 5;
 }
 
 .game-option {
@@ -150,15 +165,14 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 80px; /* Ajustar el tamaño según sea necesario */
-  height: auto; /* Ajustar el tamaño según sea necesario */
+  width: 80px;
+  height: 80px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  z-index: 3;
 }
 
 .level-button img {
-  width: 100%; /* Ajusta el tamaño de las imágenes */
-  height: auto; /* Ajusta el tamaño de las imágenes */
+  width: 100%;
+  height: 100%;
 }
 
 .level-button:hover {
@@ -169,14 +183,4 @@ h1 {
 .back-icon {
   width: 30px;
   height: auto;
-}   
-
-.footer-bar {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 10%;
-  background: #000;
-  z-index: 5;
-} 
+}
