--- a/src/app/nivel1-deslizamiento/nivel1-deslizamiento.page.html
+++ b/src/app/nivel1-deslizamiento/nivel1-deslizamiento.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar class="black-toolbar">
     <ion-buttons slot="start">
       <ion-button (click)="goBack()">
@@ -6,12 +6,10 @@
       </ion-button>
     </ion-buttons>
     <div class="title-container">
-      <div class="logo-title-box">
-        <img src="assets/img/logo.png" alt="Logo" class="logo" (click)="goHome()" />
-        <ion-title>
-          Preparación Ante Riesgo<br>y Amenazas
-        </ion-title>
-      </div>
+      <img src="assets/img/logo.png" alt="Logo" class="logo" (click)="goHome()" />
+      <ion-title>
+        Preparación Ante Riesgo<br>y Amenazas
+      </ion-title>
     </div>
     <ion-buttons slot="end">
       <ion-button (click)="navigateToInicioSesion()">
@@ -34,7 +32,7 @@
     <div class="question-container" *ngFor="let question of questions; let i = index">
       <div *ngIf="currentIndex === i">
         <div class="section section-1">
-          <img src="assets/img/your-image.png" alt="Centered Image" class="centered-image">
+          <img src="assets/img/nv-1-t.png" alt="Centered Image" class="centered-image">
         </div>
         <div class="section section-2">
           <p class="centered-text">{{ question.text }}</p>
