--- a/src/app/juego-deslizamiento/juego-deslizamiento.page.scss
+++ b/src/app/juego-deslizamiento/juego-deslizamiento.page.scss
@@ -62,6 +62,14 @@ ion-header {
   overflow: hidden;
 }
 
+h1 {
+  position: relative;
+  font-size: 2rem;
+  margin-top: 2%;
+  z-index: 1;
+  color: #000;
+}
+
 .characters {
   position: absolute;
   top: 5%;
@@ -71,7 +79,7 @@ ion-header {
   display: flex;
   justify-content: space-between;
   width: 80%;
-  z-index: 1; /* Asegúrate de que los personajes estén detrás de los botones */
+  z-index: 1; /* Asegura que los personajes estén por encima del fondo */
 }
 
 .character {
@@ -79,18 +87,24 @@ ion-header {
   max-height: 100%;
 }
 
-.terra {
+.aqua {
   position: absolute;
-  right: 80%;
-  right: 80%;
-  bottom: 7%;
+  right: 70%;
+  bottom: 5%;
+}
+.game-type {
+  flex: 1;
+  text-align: left;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding: 10px;
 }
 
 h1 {
   position: relative;
   font-size: 2.5rem;
   margin-bottom: 20px;
-  z-index: 2;
+  z-index: 1;
   color: #000;
 }
 
@@ -153,7 +167,6 @@ h1 {
   width: 80px; /* Ajustar el tamaño según sea necesario */
   height: auto; /* Ajustar el tamaño según sea necesario */
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  z-index: 3;
 }
 
 .level-button img {
@@ -169,7 +182,7 @@ h1 {
 .back-icon {
   width: 30px;
   height: auto;
-}   
+}
 
 .footer-bar {
   position: absolute;
@@ -178,5 +191,4 @@ h1 {
   width: 100%;
   height: 10%;
   background: #000;
-  z-index: 5;
-} 
+}
