--- a/src/app/nivel1-deslizamiento/nivel1-deslizamiento.page.scss
+++ b/src/app/nivel1-deslizamiento/nivel1-deslizamiento.page.scss
@@ -82,8 +82,8 @@ ion-header {
 }
 
 .centered-image {
-  width: 45%; /* Reducir el tamaño en un 10% */
-  height: 45%; /* Reducir el tamaño en un 10% */
+  width: 25%; /* Reducir el tamaño en un 10% */
+  height: auto; /* Reducir el tamaño en un 10% */
   object-fit: contain;
 }
 
@@ -162,6 +162,39 @@ ion-button.selected {
   background: #000;
 }
 
+ion-header {
+  ion-toolbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 0%;
+  }
+
+  .title-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+
+  img.logo {
+    width: 6.5%;
+    height: 6.5%;
+    margin-left: 43%;
+  }
+
+  ion-title {
+    text-align: center;
+    font-size: 1.2rem;
+    line-height: 1.5;
+    margin-right: 30%;
+  }
+
+  .icon, .back-icon {
+    width: 30px;
+    height: auto;
+  }
+}
 
 .footer-toolbar {
   --background: #000; /* Cambia el color del fondo del footer a negro */
