--- a/src/app/nivel2-deslizamiento/nivel2-deslizamiento.page.html
+++ b/src/app/nivel2-deslizamiento/nivel2-deslizamiento.page.html
@@ -32,7 +32,7 @@
     <div class="question-container" *ngFor="let question of questions; let i = index">
       <div *ngIf="currentIndex === i">
         <div class="section section-1">
-          <img src="assets/img/desliz-tierra.png" alt="Centered Image" class="centered-image">
+          <img src="assets/img/nv-2-t.png" alt="Centered Image" class="centered-image">
         </div>
         <div class="section section-2">
           <p class="centered-text">{{ question.text }}</p>
